INCLUDE_DIRECTORIES(../include ${FLOWVR_INCLUDE_DIR} )

ADD_LIBRARY(${app}.comp SHARED  ${app}.comp.cpp)
TARGET_LINK_LIBRARIES(${app}.comp ${FLOWVR_base_LIBRARY} ${FLOWVR_mod_LIBRARY} ${FLOWVR_utils_LIBRARY} ${FLOWVR_app_LIBRARY} ${FLOWVR_app_comp_LIBRARY})
INSTALL(TARGETS ${app}.comp LIBRARY DESTINATION lib${LIBDIR_SUFFIX})
 
ADD_SUBDIRECTORY(flood)
ADD_SUBDIRECTORY(viewer)
